--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="text" placeholder="Last name" required>
                     <input type="email" placeholder="Email address" required>
                     <input type="password" placeholder="Password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
-                    <button class="btn">CLAIM YOUR FREE TRIAL</button>
+                    <button type="submit" class="btn">CLAIM YOUR FREE TRIAL</button>
                     <div class="aline"><p class="text">by clicking the button, you are agreeing to our <span class="middle">Terms and conditions</span>
                     </p></div>
                 </form>
