--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
                 understanding how developers think is invaluable
             </p>
         </div>
+
+
         <div class="second">
+
+                <!--TRY IF -->
             <div class="second-item">
                 Try it for free 7 days <span>then $20/mo.thereafter</span>
             </div>
+
+
             <!-- fomr beinging -->
+
+
             <div class="next">
                 <form action="#">
                     <input type="text" placeholder="First name" required>
